docs: added -p no:ape_test to tool.pytest.ini_options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ exclude = '''
 [tool.pytest.ini_options]
 addopts = """
     -n auto
+    -p no:ape_test
     --cov-branch
     --cov-report term
     --cov-report html
