--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ markers = "fuzzing: Run Hypothesis fuzz test suite"
 line_length = 100
 force_grid_wrap = 0
 include_trailing_comma = true
-known_third_party = ["ape", "pytest", "semantic_version", "setuptools", "solcx"]
+known_third_party = ["ape", "ethpm_types", "packaging", "pytest", "semantic_version", "setuptools", "solcx"]
 known_first_party = ["ape_solidity"]
 multi_line_output = 3
 use_parentheses = true
