--- a/tests/ape-config.yaml
+++ b/tests/ape-config.yaml
@@ -1,8 +1,19 @@
 dependencies:
-  - name: __test_dependency__
-    local: ./dependency
+  - name: TestDependency
+    local: ./Dependency
+
+  - name: BrownieDependency
+    local: ./BrownieProject
+
+  # NOTE: Currently have to specify dependencies of dependencies
+  - name: TestDependencyOfDependency
+    local: ./DependencyOfDependency
 
 solidity:
   import_remapping:
-    - "@remapping=__test_dependency__"
-    - "@remapping_2=__test_dependency__"
+    - "@remapping/contracts=TestDependency"
+    - "@remapping_2=TestDependency"
+    - "@brownie=BrownieDependency"
+
+    # NOTE: Currently have to specify dependency-remappings of dependencies
+    - "@dependency_remapping=TestDependencyOfDependency/local"
