fix: issue preventing multiple contact types in single source

--- a/tests/ProjectWithinProject/ape-config.yaml
+++ b/tests/ProjectWithinProject/ape-config.yaml
@@ -2,6 +2,10 @@ dependencies:
   - name: TestRemapping
     local: ../Dependency
 
+  - name: TestDependencyOfDependency
+    local: ../DependencyOfDependency
+
 solidity:
   import_remapping:
     - "@remapping=TestRemapping"
+    - "@dependency_remapping=TestDependencyOfDependency/local"
