--- a/tests/ape-config.yaml
+++ b/tests/ape-config.yaml
@@ -2,8 +2,15 @@ dependencies:
   - name: TestDependency
     local: ./Dependency
 
+  # Make sure can use a Brownie project as a dependency
   - name: BrownieDependency
     local: ./BrownieProject
+
+  # Make sure can use a Brownie-style dependency.
+  # Brownie-style dependencies don't compile on their own, necessarily
+  # and are more a collection of contract types you can use.
+  - name: BrownieStyleDependency
+    local: ./BrownieStyleDependency
 
   # NOTE: Currently have to specify dependencies of dependencies
   - name: TestDependencyOfDependency
@@ -14,6 +21,10 @@ solidity:
     - "@remapping/contracts=TestDependency"
     - "@remapping_2=TestDependency"
     - "@brownie=BrownieDependency"
+
+    # Remapping for showing we can import a contract type from a brownie-style dependency
+    # (provided the _single_ contract type compiles in the project).
+    - "@styleofbrownie=BrownieStyleDependency"
 
     # NOTE: Currently have to specify dependency-remappings of dependencies
     - "@dependency_remapping=TestDependencyOfDependency/local"
