feat: implement flattening api [APE-794] (#107)
* implement flattening api

* run linter

* fix: run isort

* fix: existing error (missing dependency remapping)

* fix: strip 'import' statements & include filename

* fix: check for no file path (mypi)

* fix: lint

* implement license detection & fix filename order

* lint

* rename function and sort imports

* Update ape_solidity/compiler.py

Co-authored-by: antazoey <admin@antazoey.me>

* pre-compile regex for perf

* add test comparing against pre-flattened contracts

mainly to make sure we don't break anything in the future

* fix: regex multiline flag at comp time

* fix: refactor process_licenses

handle if no licenses are present

* fix: rename imports function

* fix: rename fn to internal name

* fix test diff

* fix: lint

* fix: type annotation on get_licenses

* fix: rename flattened file

* fix: move flattened file again

---------

Co-authored-by: z80 <z80@apeworx.io>
Co-authored-by: antazoey <admin@antazoey.me>

--- a/tests/ape-config.yaml
+++ b/tests/ape-config.yaml
@@ -1,6 +1,8 @@
 dependencies:
   - name: TestDependency
     local: ./Dependency
+  - name: DependencyOfDependency
+    local: ./DependencyOfDependency
 
   # Make sure can use a Brownie project as a dependency
   - name: BrownieDependency
@@ -32,6 +34,7 @@ solidity:
     - "@remapping/contracts=TestDependency"
     - "@remapping_2=TestDependency"
     - "@remapping_2_brownie=BrownieDependency"
+    - "@dependency_remapping=DependencyOfDependency"
 
     # Remapping for showing we can import a contract type from a brownie-style dependency
     # (provided the _single_ contract type compiles in the project).
